--- a/genesis_tcd103/css/responsive.css
+++ b/genesis_tcd103/css/responsive.css
@@ -170,14 +170,17 @@ body.admin-bar #drawer_menu { padding-top:32px; }
 
 /* 共通パーツ */
 .cb_design_header { max-width:inherit; padding:0 60px; }
+.cb_custom_section_header { max-width:inherit; padding:0 60px; }
 .cb_design_arrow_button { max-width:inherit; padding:0 60px; }
 @media screen and (max-width:1100px) {
   .cb_design_header { padding:0 40px; }
+  .cb_custom_section_header { padding:0 40px; }
   .cb_design_arrow_button { padding:0 40px; }
 }
 @media screen and (max-width:800px) {
 	.cb_design_content { padding:40px 0; }
   .cb_design_header { padding:0 20px; }
+  .cb_custom_section_header { padding:0 20px; }
   .cb_design_arrow_button { padding:0 20px; margin-top:40px; }
 	.cb_design_content .shutter_image + .design_arrow_button { margin-top:40px; }
 }
