--- a/genesis_tcd103/style.css
+++ b/genesis_tcd103/style.css
@@ -83,7 +83,10 @@ h1, h2, h3, h4, h5, h6 { font-weight:400; color: #283F75; }
 /* clearfix */
 .clearfix::after { display:block; clear:both; content:""; }
 
-
+/* Display Flex */
+.d_flex{
+  display: flex;
+}
 
 
 /* ----------------------------------------------------------------------
@@ -146,9 +149,40 @@ body.home .design_header { margin-top:0; }
 .design_header .desc { width:100%; line-height:1.8;  opacity:0; transition: opacity 1.0s ease 0.2s; }
 .design_header .desc.mobile { display:none; }
 .design_header.animate .desc { opacity:1; }
-.sub_title.colored { font-size:18px; margin-top:10px; margin-bottom:-5px; }
+.sub_title.colored { font-size:20px; font-weight: 500; margin-top:10px; margin-bottom:0px; }
+
+/* Title breakC Section */
+.title_break_section { display:flex; margin-bottom:60px; margin-top:90px; }
+body.hide_sidebar .title_break_section, body.single-service .title_break_section { margin-top:120px; }
+/* body.home .design_header { margin-top:0; }  */
+.title_break_section .title_area { width:50%; position: relative; }
+.title_break_section .title_area.no_desc { width:auto; padding-right:0px; }
+.title_break_section .large_headline { font-size:70px; overflow:hidden;  padding:0; line-height:1; }
+.title_break_section .sub_title { overflow:hidden; padding:0; font-size:18px; line-height:1.4; }
+.title_break_section .large_headline span, .title_break_section .sub_title span{ transform: translate3d(0,100%,0); opacity:0; display:inline-block; transition: transform 0.7s ease, opacity 0.9s ease; }
+.image_animate_right { transform: translate3d(100%,0,0); opacity:0; display:inline-block; transition: transform 0.7s ease, opacity 0.9s ease; }
+.image_animate_left { transform: translate3d(-100%,0,0); opacity:0; display:inline-block; transition: transform 0.7s ease, opacity 0.9s ease; }
+.image_animate_opacity { transform: translate3d(0,0,100%); opacity:0; display:inline-block; transition: transform 0.7s ease, opacity 0.9s ease; }
+.title_break_section .sub_title span { transition: transform 0.7s ease 0.3s, opacity 0.9s ease 0.3s; }
+.image_animate, .image_animate_left, .image_animate_right, .image_animate_opacity { transition: transform 0.7s ease 0.3s, opacity 0.9s ease 0.3s; }
+.title_break_section.animate .large_headline span, .title_break_section.animate .sub_title span { transform: translate3d(0,0,0); opacity:1; }
+.image_animate.animate, .image_animate_left.animate, .image_animate_right.animate, .image_animate_opacity.animate { transform: translate3d(0,0,0); opacity:1; }
+.title_break_section .desc { width:100%; line-height:1.8;  opacity:0; transition: opacity 1.0s ease 0.2s; }
+.title_break_section .desc.mobile { display:none; }
+.title_break_section.animate .desc { opacity:1; }
+.title_break_style{padding: 0px 20px;}
+.bdr_radius_24{border-radius: 42px;}
+@media (max-width: 975px) {
+  .title_break_wh_100{width: 100% !important; height: 100% !important;}
+}
+@media (max-width: 720px) {
+  .title_break_section{display: grid !important;}
+  .title_break_section .title_area{width: 100% !important;}
+}
 
 
+
+/* Custom section */
 .design_custom_header { display:flex; margin-bottom:60px; margin-top:90px; }
 body.hide_sidebar .design_custom_header, body.single-service .design_custom_header { margin-top:120px; }
 /* body.home .design_header { margin-top:0; }  */
@@ -163,10 +197,20 @@ body.hide_sidebar .design_custom_header, body.single-service .design_custom_head
 .design_custom_header .desc { width:100%; line-height:1.8;  opacity:0; transition: opacity 1.0s ease 0.2s; }
 .design_custom_header .desc.mobile { display:none; }
 .design_custom_header.animate .desc { opacity:1; }
-.sub_title.colored { font-size:18px; margin-top:10px; margin-bottom:-5px; }
-.super_style{ position: absolute; top: -12px; opacity: .2;}
+.box_shadow_image{box-shadow:  20px 20px 60px #bebebe61, -20px -20px 60px #bebebe61}
+.sub_title.colored { font-size:20px; font-weight: 500; margin-top:10px; margin-bottom:0px; }
+.super_style{ position: absolute; top: -12px; opacity: .1;}
 .large_style { margin-bottom: 30px;}
-
+.tags_text { overflow:hidden; margin:0; padding:0; text-align:center; color: #fff !important;}
+.align_items_center{align-items: center;}
+.flex_direction_column{flex-direction: column;}
+.width_100{ width: 100% !important;}
+.height_40{height: 240px;}
+.text_center{text-align: center;}
+.justify_content_center{justify-content: center;}
+.bg_panel{ padding: 18px 32px; border-radius: 12px;  }
+.gap_40{gap:24px;}
+.padding_20{padding: 20px 0; flex-wrap: wrap;}
 /* Free space */
 .cb_free_space{
   position: relative;
@@ -208,7 +252,7 @@ body.hide_sidebar .design_custom_header, body.single-service .design_custom_head
 }
 .orange_image_background{
   padding: 20px;
-  border-radius: 32px;
+  border-radius: 42px;
 }
 .top_left{ top:-18px; left: -18px; }
 .top_right{top:-18px; right:-18px;}
@@ -230,6 +274,9 @@ body.hide_sidebar .design_custom_header, body.single-service .design_custom_head
 @media (max-width: 800px) {
   .super_style{ position: absolute; top: 14px; color: #fe8d0133}
   .margin_right_30{ margin-right: 0px; }
+  .height_40{ height: 160px; }
+  .bdr_radius_24, .orange_image_background, .cb_title_break_section {border-radius: 16px !important;}
+  .large_style{ margin-bottom: 0px !important; }
 }
 @media (max-width: 1123px) {
   .design_custom_header .title_area{
@@ -247,6 +294,17 @@ body.hide_sidebar .design_custom_header, body.single-service .design_custom_head
       display: grid !important;
   }
   
+}
+
+/* MARQUEE TEXT STYLE */
+.orange_cirles_style{
+  border-radius: 100%;
+  height: 24px;
+  width: 24px;
+  margin: 0px 32px;
+}
+.align-items-center{
+  align-items: center;
 }
 /* 矢印アイコン付き右寄せリンク */
 .design_arrow_button { text-align:right; margin-bottom:50px; }
@@ -494,17 +552,27 @@ body.home.header_slider_layout_type2 #header { position:fixed; }
 
 /* 共通パーツ */
 /* .cb_design_header { max-width:1700px; margin:0 auto 60px; padding:0 100px; justify-content: space-between; } */
-.cb_design_header { max-width:1700px; margin-left: auto; margin-right: auto; margin-top: 60px; margin-bottom: 60px; padding:0 100px; justify-content: space-between; }
+.cb_design_header { max-width:1700px; margin-left: auto; margin-right: auto; margin-top: 60px; margin-bottom: 60px; padding:0 100px;  }
+.cb_custom_section_header { max-width:1700px; margin-left: auto; margin-right: auto; margin-top: 60px; margin-bottom: 60px; padding:0 100px;  }
+.cb_title_break_section { max-width:1700px; margin-left: auto; margin-right: auto; margin-top: 80px; margin-bottom: 80px; padding:32px;  border-radius: 42px; }
 .cb_design_arrow_button { max-width:1700px; margin:60px auto 0; padding:0 100px; }
 .cb_design_full_button { max-width:1700px; margin:30px auto 0;  }
-
+@media (min-width: 1123px) {
+  .cb_custom_section_header{justify-content: space-between;}
+  .cb_title_break_section{justify-content: space-between;}
+}
 
 /* デザインコンテンツ */
-/* .cb_design_content { padding:150px 0; } */
-.cb_design_content:nth-child(even) { background:#fff; }
+.cb_design_content { padding:80px 0; } 
+.cb_design_content:nth-child(even) { background:none; }
 .cb_design_content .item_list { max-width:1700px; margin:0 auto; padding:0 100px; display:flex; flex-wrap:wrap; }
 .cb_design_content .shutter_image + .design_arrow_button { margin-top:60px; }
 .cb_design_content .shutter_image { margin-bottom:0px !important; }
+
+
+/* デザインコンテンツ */
+.cb_marquee_content { padding-top: 0px; padding-bottom:30px; padding-left: 0px; padding-right: 0px; margin-bottom:100px;} 
+.cb_marquee_content:nth-child(even) { background:#fff; }
 
 
 /* サービス */
@@ -636,8 +704,11 @@ body.home #page_header .image { margin-bottom:0; }
 /* ヘッダー */
 #page_header { }
 #page_header .design_header { max-width:1700px; margin:-10px auto 140px; padding:0 100px; }
+#page_header .title_break_section { max-width:1700px; margin:-10px auto 140px; padding:0 100px; }
 body.page-template-default.show_sidebar.normal_content_width #page_header .design_header { max-width:1455px; }
+body.page-template-default.show_sidebar.normal_content_width #page_header .title_break_section { max-width:1455px; }
 body.page-template-default.show_sidebar.short_content_width #page_header .design_header { max-width:1365px; }
+body.page-template-default.show_sidebar.short_content_width #page_header .title_break_section { max-width:1365px; }
 #page_header .desc_area { display:flex; flex-wrap:wrap; max-width:1700px; margin:-90px auto 140px; padding:0 100px; }
 body.page-template-default.show_sidebar.normal_content_width #page_header .desc_area { max-width:1455px; }
 body.page-template-default.show_sidebar.short_content_width #page_header .desc_area { max-width:1365px; }
@@ -716,6 +787,7 @@ body.hide_breadcrumb #container { padding-top:150px; }
 .gray_bg:after { background:#f6f6f6; content:''; display:block; width:200vw; height:100%; position:absolute; top:0; left:-50%; z-index:-1; }
 #company_message .post_col img { width:100%; height:auto; margin:0; }
 #company_message .design_header { margin-top:0; }
+#company_message .title_break_section { margin-top:0; }
 #company_message .catch { margin:-10px 0 50px 0; }
 #company_data_list { margin:-10px 0 130px; }
 #company_data_list h4 { font-size:18px; color:#ff3f00; margin:0 0 30px 0; }
@@ -804,6 +876,7 @@ body.hide_breadcrumb #container { padding-top:150px; }
 .service_category_content.even { background:#f5f5f5; }
 .service_category_content .header { max-width:1700px; margin:0 auto; padding:0 100px; }
 .service_category_content .design_header { margin-top:0; }
+.service_category_content .title_break_section { margin-top:0; }
 .service_category_content .desc_area { display:flex; flex-wrap:wrap; margin-top:60px; }
 .service_category_content .header .catch { width:50%; line-height:1.5; padding-right:50px; }
 .service_category_content .header .desc { width:50%; line-height:2.6; padding-left:50px; }
@@ -892,6 +965,7 @@ body.short_content_width #single_service_main_content { max-width:1100px; }
 #service_link_list { background:#f5f5f5; }
 #service_link_list_inner { max-width:1700px; margin:0 auto 0; padding:140px 100px 150px; }
 #service_link_list .design_header { margin-bottom:60px; margin-top:0; }
+#service_link_list .title_break_section { margin-bottom:60px; margin-top:0; }
 
 
 /* 1カラム */
