--- a/genesis_tcd103/admin/css/my_admin.css
+++ b/genesis_tcd103/admin/css/my_admin.css
@@ -64,7 +64,7 @@
 
 /* トップページのスライダー */
 #index_slider_layout { margin-right:-1em; margin-bottom:30px; }
-#index_slider_layout .tcd_admin_image_radio_button + label { width:calc(100% / 3 - 1.5em); }
+#index_slider_layout .tcd_admin_image_radio_button + label { width:calc(100% / 4 - 1.5em) !important; }
 
 
 /* ロード画面 */
