--- a/genesis_tcd103/css/marquee.css
+++ b/genesis_tcd103/css/marquee.css
@@ -17,3 +17,7 @@
   0% { transform: translate(0, 0); }
   100% { transform: translate(-50%, 0); }
 }
+
+.background-panel-image{
+  background-color: red;
+}
