--- a/genesis_tcd103/style.css
+++ b/genesis_tcd103/style.css
@@ -117,6 +117,14 @@ h1, h2, h3, h4, h5, h6 { font-weight:400; color: #283F75; }
 .overflow_hidden{
   overflow: hidden;
 }
+.justify_content_end{
+  justify-content: end !important;
+}
+.post_list{
+  display: flex !important;
+  flex-direction: column;
+  gap: 24px;
+}
 /* ----------------------------------------------------------------------
  基本設定
 ---------------------------------------------------------------------- */
@@ -187,7 +195,7 @@ body.hide_sidebar .design_header, body.single-service .design_header { margin-to
 body.home .design_header { margin-top:0; } 
 .design_header .title_area { width:50%; position: relative; padding-top:60px; margin-right: 30px;}
 .design_header .title_area.no_desc { width:auto; padding-right:0px; }
-.design_header .large_headline { font-size:70px; overflow:hidden;  padding:0; line-height:1; text-align:left; }
+.design_header .large_headline { font-size:70px; text-transform: uppercase; overflow:hidden;  padding:0; line-height:1; text-align:left; }
 .design_header .super_large_headline { font-size:120px; overflow:hidden; margin:0; padding:0; text-align:left; }
 .design_header .sub_title { overflow:hidden; padding:0; font-size:18px; line-height:1.4; }
 .design_header .large_headline span, .design_header .sub_title span { transform: translate3d(0,100%,0); opacity:0; display:inline-block; transition: transform 0.7s ease, opacity 0.9s ease; }
@@ -1066,9 +1074,9 @@ body.hide_breadcrumb #container { padding-top:0px !important; }
 
 
 /* カテゴリーページ */
-.service_category_post_list { display:flex; flex-wrap:wrap; position:relative; max-width:1700px; margin:0 auto 150px; padding:0 100px; }
+.service_category_post_list { display:flex; gap: 20px; flex-wrap:wrap; position:relative; max-width:1700px; margin:0 auto 150px; padding:0 100px; }
 .service_header_image + #archive_service .service_category_post_list { margin-top:150px; }
-.service_category_post_list .item { position:relative; width:50%; margin:0 -1px -1px 0; border:1px solid #ddd; }
+.service_category_post_list .item { position:relative; width:49%; margin:0 -1px -1px 0; border-radius: 24px; border:1px solid #fff; background-color: #f9f9f9; }
 .service_category_post_list .item a { display:block; display:flex; flex-wrap:wrap; align-items:center; padding:40px; position:relative; }
 .service_category_post_list .image_wrap { width:190px !important; height:190px !important; position:relative; z-index:1; overflow:hidden; border-radius:5px; aspect-ratio:1 /1; }
 .service_category_post_list .image_wrap img { width:100%; height:100%; position:absolute; top:0; left:0; object-fit:cover; }
@@ -1080,7 +1088,14 @@ body.hide_breadcrumb #container { padding-top:0px !important; }
 .service_header_desc  + #archive_service .service_category_post_list { margin-top:0; }
 #archive_service .service_category_post_list { margin-top:150px; }
 
-
+@media only screen and (max-width: 979px) {
+	.service_category_post_list .item { width: 100% !important; }
+  .service_category_post_list { display: flex !important; flex-direction: row; gap: 20px;}
+}
+@media only screen and (max-width: 800px) {
+	.service_category_post_list .item { width: 100% !important; }
+  #archive_service { padding: 0px 20px !important; margin-bottom: 50px;}
+}
 
 
 /* ----------------------------------------------------------------------
@@ -1089,7 +1104,7 @@ body.hide_breadcrumb #container { padding-top:0px !important; }
 
 /* ヘッダー */
 #single_service_header { width:100%; height:600px; position:relative; overflow:hidden; }
-#single_service_header .large_headline { font-size:70px; overflow:hidden; }
+#single_service_header .large_headline { font-size:70px; overflow:hidden; text-transform: uppercase; color: #fff; }
 #single_service_header .sub_title { overflow:hidden; }
 #single_service_header .large_headline span, #single_service_header .sub_title span { transform: translate3d(0,100%,0); opacity:0; display:inline-block; transition: transform 0.7s ease, opacity 0.9s ease; }
 #single_service_header.animate .large_headline span, #single_service_header.animate .sub_title span { transform: translate3d(0,0,0); opacity:1; }
@@ -1171,7 +1186,7 @@ body.short_content_width #single_service_main_content { max-width:1100px; }
 .news_list .content { width:calc(100% - 190px); padding:0 0 0 40px; }
 .news_list .no_image .content { width:auto; padding:0; }
 .news_list .category_button { margin-bottom:25px; }
-.news_list .title { font-size:20px; line-height:1.8; margin-bottom:20px; }
+.news_list .title { font-size:16px; line-height:1.8; margin-bottom:20px; }
 .news_list .title a { display:block; max-height:3.6em; overflow:hidden; visibility:visible; }
 .news_list .title span { display:-webkit-inline-box; -webkit-box-orient:vertical; -webkit-line-clamp:2; }
 .news_list .date { position:relative; color:#999; font-size:16px; margin:0; display:block; }
@@ -1194,7 +1209,7 @@ body.short_content_width #single_service_main_content { max-width:1100px; }
 
 /* 最新のお知らせ */
 #recent_news .headline { font-size:28px; line-height:1; text-align:center; padding:60px 0; }
-#recent_news .item { display:flex; flex-wrap:wrap; align-items:center; padding:40px; border:1px solid #ddd; margin:0 0 -1px 0; }
+#recent_news .item { display:flex; flex-wrap:wrap; align-items:center; padding:40px; border:1px solid #fff; margin:0 0 -1px 0; background-color: #f9f9f9; border-radius: 24px;; }
 #recent_news .image_link { display:block; width:140px; height:140px; position:relative; z-index:1; overflow:hidden; border-radius:5px; aspect-ratio:1 /1; }
 #recent_news .image_wrap { width:100%; height:100%; position:relatiive; overflow:hidden; z-index:2; }
 #recent_news .image_wrap img { width:100%; height:100%; position:absolute; top:0; left:0; object-fit:cover; }
@@ -1553,7 +1568,7 @@ body.page-template-default.show_sidebar.short_content_width #bread_crumb { max-w
 #bread_crumb li.home a { position:relative; width:16px; }
 #bread_crumb li.home a span { opacity:0; }
 #bread_crumb li.home a:before {
-  font-family:'Noto_Sans'; content:'\e90c'; font-size:12px; color:#000;
+  font-family:'design_plus'; content:'\e90c'; font-size:12px; color:#000;
   display:inline-block; top:0px; position:relative;
   -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale;
 }
